Fixed More Spacing & Media

--- a/muirisc/src/CSS/Footer.css
+++ b/muirisc/src/CSS/Footer.css
@@ -6,7 +6,7 @@
   right: 0;
   width: 100%;
   height: 2.5rem;
-  /* margin-top: 1rem; */
+  margin-top: 5rem;
   /* margin: 0rem; */
   padding: 0rem;
   /* float: left; */
